# Sentinel

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  WARP.md  codecov.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  sentinel.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  e2e.yml  release-drafter.yml  release.yml  stale.yml
docs/: ARCHITECTURE.md  CONFIG.md  LESSONS_LEARNED.md  PROBES.md  REPO_SCANNING.md  RESEARCH_COMPARISON.md  ROADMAP.md  SECURITY_TEST_PLAN.md  TESTING.md  TODO.md  USAGE.md
docs/samples/: discovery.json  probe.json  scan.json  scan.md  sentinel.example.yml
scanner/: __init__.py  auth.py  config.py  discovery.py  http.py  probes.py  repo_scan.py
scripts/: run_harness.cmd  run_scanner.cmd  run_vuln_mcp.cmd  run_vuln_mcp.sh  run_vuln_mcp_insecure.cmd  run_vuln_mcp_insecure.sh  run_vuln_mcp_safe.cmd  run_vuln_mcp_safe.sh  setup.cmd
testharness/: go.mod  main.go
tests/: test_discovery.py  test_http_policy.py  test_jwks_probe.py
vuln-mcp/: go.mod  main.go
