[project]
name = "mcp-scanner"
version = "0.1.0"
description = "Scan and probe MCP endpoints for security and capability checks"
authors = [{ name = "Sentinel Maintainers" }]
requires-python = ">=3.10"
readme = "README.md"

[tool.ruff]
line-length = 100
select = ["E","F","I","B","UP","SIM","PL"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["scanner"]
profile = "black"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
pythonpath = ["."]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
