[project]
name = "mcp-scanner"
version = "0.1.0"
description = "Scan and probe MCP endpoints for security and capability checks"
authors = [{ name = "Sentinel Maintainers" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = ["mcp", "security", "oauth", "oidc", "scanner"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
]
dependencies = [
  "requests>=2.31.0,<3",
]

[project.scripts]
mcp-scanner = "main:main"

[tool.ruff]
line-length = 100
select = ["E","F","I","B","UP","SIM","PL"]
ignore = [
  "E501",
  "PLR0913",  # Too many arguments
  "PLR0912",  # Too many branches
  "PLR0915",  # Too many statements
  "PLR0911",  # Too many return statements
  "PLW0603",  # Global statement usage (needed for config)
]

[tool.ruff.isort]
known-first-party = ["scanner"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --cov=./ --cov-report=xml"
pythonpath = ["."]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
